[package]
name = "secstore"
version = "0.1.0"
edition = "2024"

[lib]
name = "secstore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"              # AES-GCM authenticated encryption
chacha20poly1305 = "0.10"     # Alternative cipher
argon2 = "0.5"                # Password-based key derivation
rand = "0.8"                  # Random salts & nonces
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
maturin = "1.7"